--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           VERSION=$(grep version /tmp/asternic_cdr/module.xml  | head -n 1 | sed 's/[></]//g' | sed 's/version//g' | sed 's/ //g')
           rm -rf /tmp/asternic_cdr >/dev/null
           mkdir /tmp/asternic_cdr
-          cp -pr ${{ github.workspace }} /tmp/asternic_dr
+          cp -pr ${{ github.workspace }}/* /tmp/asternic_cdr
           ls -la /tmp/asternic_cdr
           cd /tmp
           tar zcvf asternic_cdr-${VERSION}.tgz asternic_cdr
