--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: compress to file
         run: |
-          VERSION=$(grep version /tmp/asternic_cdr/module.xml  | head -n 1 | sed 's/[></]//g' | sed 's/version//g' | sed 's/ //g')
+          VERSION=$(grep version ${{ github.workspace }}/module.xml  | head -n 1 | sed 's/[></]//g' | sed 's/version//g' | sed 's/ //g')
+          echo $VERSION
           rm -rf /tmp/asternic_cdr >/dev/null
           mkdir /tmp/asternic_cdr
           cp -pr ${{ github.workspace }}/* /tmp/asternic_cdr
