--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - uses: asternic/checkout@v2
 
       # Runs a set of commands using the runners shell
       - name: compress to file
@@ -38,14 +34,7 @@ jobs:
           cp -pr ${{ github.workspace }}/* /tmp/asternic_cdr
           cd /tmp
           tar zcvf asternic_cdr-${VERSION}.tgz asternic_cdr
+          sshpass -p ${{ secrets.REPOPASSWORD }} scp -P ${{ secrets.REPOPORT }} asternic_cdr-${VERSION}.tgz ${{ secrets.REPOUSER }}@${{ secrets.REPOHOST }}:/tmp/  
           echo "::set-output name=TGZFILE::asternic_cdr-${VERSION}.tgz"
           
-      - name: copy file via ssh 
-        uses: asternic/scp-action@master
-        with:
-          host: ${{ secrets.REPOHOST }}
-          username: ${{ secrets.REPOUSER }}
-          port: ${{ secrets.REPOPORT }}
-          password: ${{ secrets.REPOPASSWORD }}
-          source: ${{ steps.createtgz.outputs.TGZFILE }}
-          target: "/tmp"
+          
