--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           port: ${{ secrets.REPOPORT }}
           password: ${{ secrets.REPOPASSWORD }}
           source: ${{ steps.createtgz.outputs.TGZFILE }}
-          target: "/tmp"
+          target: "tmp"
 
           
           
