--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           cp -pr ${{ github.workspace }}/* /tmp/asternic_cdr
           cd /tmp
           tar zcvf asternic_cdr-${VERSION}.tgz asternic_cdr
-          echo "::set-output name=TGZFILE::asternic_cdr-${VERSION}.tgz"
+          echo "::set-output name=TGZFILE::/tmp/asternic_cdr-${VERSION}.tgz"
       - name: test output
         run: |
           echo ${{ steps.createtgz.outputs.TGZFILE }}
