--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           cp -pr ${{ github.workspace }}/* /tmp/asternic_cdr
           cd /tmp
           tar zcvf asternic_cdr-${VERSION}.tgz asternic_cdr
-          mv asternic_cdr-${VERSION.tgz ${{ github.workspace }}
+          mv asternic_cdr-${VERSION}.tgz ${{ github.workspace }}
           echo "::set-output name=TGZFILE::${{ github.workspace }}/asternic_cdr-${VERSION}.tgz"
       - name: test output
         run: |
